--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <h1>这是一个能打代码的主页</h1>
 <h2>我们将在这里学习html</h2>
+<h2>我们将在这里学习html</h2>
+<h2>我们将在这里学习html</h2>
+<h2>我们将在这里学习html</h2>
+<h2>我们将在这里学习html</h2>
+<h2>我们将在这里学习html</h2>
 <h3>这是不同大小的title, 我是h3</h3>
-<hr>
