--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,3 @@
-<body >
-  <div class = "window">
-    <div class = "upbox">
-      <div class = "box">
-        <input class = "input" type="text" placeholder="user name">
-
-      </div>
-      <div class = "box">
-        <input class ="input" type="text" placeholder="password">
-      </div>
-        <div class = "box">
-          <input class = "input" type="submit" value="LOGIN">
-      </div>
-      <div>
-        <p>Not registered ?
-      </div>
-    </div>
-  </div>
-</body>
+<h3>I am the APP component</h3>
+<hr>
+<app-server></app-server>
